--- a/googa.css
+++ b/googa.css
@@ -17,7 +17,7 @@ img{
     margin: 0;
 }
 #GameBoard{
-    width: 50%;
+    width: 50vh;
     height: 90vh;
     border: 2.5px solid;
     background-image: url(PotatoDogBackground.png);
